--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ label {
 
 .navbar-nav>li {
     float: left;
-    margin-right: 23px;
+    margin-right: 12px;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -121,7 +121,7 @@ label {
     text-transform: uppercase;
     padding: 29px 13px;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .navbar-default .navbar-brand:focus,
@@ -2435,7 +2435,7 @@ textarea:-ms-input-placeholder {
         font-size: 1.3em;
         letter-spacing: 1.5px;
     }
-    .services-agileits-w3layouts-w3layouts img {
+    .services-agileits-w3layouts-w3layouts img{
         width: 17em;
     }
     .social-icons.events-icons {
@@ -2665,3 +2665,31 @@ textarea:-ms-input-placeholder {
 }
 
 /*--responsive--*/
+/*video*/
+.video {
+    margin: 0;
+    padding:0;
+}
+.cameras {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
+}
+#vid1, #vid2, #vid3, #vid4 {
+    text-align: center;
+    width: 30%;
+    height: 45%;
+    /*float: right;*/
+    margin: 20px;
+    cursor: move;
+
+}
+#vid1 video, #vid2 video, #vid3 video, #vid4 video {
+    /*display: block;*/
+    margin: auto;
+    width: 100%;
+    height: 100%;
+}
